--- a/src-v2/main.scss
+++ b/src-v2/main.scss
@@ -155,3 +155,12 @@ h3 {
   font-weight: bold;
   margin-bottom: 20px;
 }
+
+.webgpu-note {
+  background-color: #e0f7fa;
+  color: #006064;
+  padding: 15px;
+  border-radius: 5px;
+  text-align: center;
+  margin-bottom: 20px;
+}
